--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.7.2",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.6",
-    "postcss": "8.4.28",
+    "next": "^15.1.4",
+    "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
